# pure-agent-loop

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2025-01-30-parallel-tool-execution-design.md  2025-01-30-parallel-tool-execution.md  2026-01-29-pure-agent-loop-design.md  2026-01-29-pure-agent-loop-implementation.md  2026-01-30-builtin-prompt-and-todo-design.md  2026-01-30-builtin-prompt-and-todo-plan.md  2026-01-30-dynamic-todo-update-design.md  2026-01-30-skill-prompt-integration-design.md  2026-01-30-skill-system-design.md  2026-01-30-skill-system-implementation.md  2026-01-30-thinking-mode-design.md  2026-01-30-thinking-mode-implementation.md  2026-01-30-todowrite-simplify-design.md  2026-01-31-tool-class-registration-design.md  2026-02-26-conversation-session-design.md  2026-02-26-conversation-session-plan.md  2026-02-26-file-manager-design.md  2026-02-26-file-manager-plan.md  2026-02-26-file-tools-sandbox-design.md  2026-02-26-file-tools-sandbox-plan.md  2026-02-26-system-refactor-design.md  (+3 more)
examples/: .env.example  basic.py  conversation.py  custom_llm.py  custom_renderer.py  exa_search.py  exa_search_class_tools.py  exa_search_with_skill.py  file_editing.py  requirements.txt  rich_renderer.py  streaming.py
tests/: test_agent.py  test_builtin_tools.py  test_conversation.py  test_errors.py  test_events.py  test_file_tools.py  test_limits.py  test_llm_base.py  test_llm_types.py  test_loop.py  test_openai_client.py  test_prompts.py  test_renderer.py  test_retry.py  test_sandbox.py  test_thinking_mode_integration.py  test_tool.py
(+39 files in other folders)
